# json-patch-cli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.sh
.github/workflows/: ci.yaml  release.yaml
fixtures/: from.json  patch.json  to.json
src/: main.rs
