[package]
name = "json-patch-cli"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/kellpossible/json-patch-cli"
keywords = ["cli", "json", "merge", "patch"]
description = "A command to perform JSON RFC 6902 patching, merging and editing operations"

[[bin]]
name = "json-patch"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.36"
console = "0.15.8"
json-patch = "3.0.1"
notify = "7.0.0"
serde_json = "1.0.132"
similar = { version = "2.6.0", features = ["inline"] }
tempfile = "3.13.0"
